throwing up this failed PalmOS port so i can remind myself later how i got a palmos application even building

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ examples/*/*
 examples/*/*.exe
 !examples/*/
 !examples/*.*
-!examples/*/*.*
+!examples/*/*.c
+!examples/*/*.txt
 compile_flags.txt
+Makefile
